fix: dark mode

--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -13,13 +13,13 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
+  html {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
 
-body {
+html, body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
